--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "yiisoft/yii2-app-basic",
-    "description": "Yii 2 Basic Project Template",
-    "keywords": ["yii2", "framework", "basic", "project template"],
-    "homepage": "http://www.yiiframework.com/",
+    "name": "http://10.201.54.232/vanesa/clienteLTI",
+    "description": "Cliente LTI Yii 2",
+    "keywords": ["LTI", "1.3", "Advantage", "yii2", "framework", "basic", "project template"],
+    "homepage": "http://ailanto-dev.intecca.uned.es",
     "type": "project",
     "license": "BSD-3-Clause",
     "support": {
@@ -67,6 +67,12 @@
         {
             "type": "composer",
             "url": "https://asset-packagist.org"
+        }
+    ],
+    "authors": [
+        {
+            "name": "Francisco Sánchez",
+            "email": "fjsanchez@intecca.uned.es"
         }
     ]
 }
