Yii: Index. Actualiza docker-compose name config.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "http://10.201.54.232/vanesa/clienteLTI",
+    "name": "clienteLTI",
     "description": "Cliente LTI Yii 2",
     "keywords": ["LTI", "1.3", "Advantage", "yii2", "framework", "basic", "project template"],
     "homepage": "http://ailanto-dev.intecca.uned.es",
