--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,9 +67,9 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: echo "::set-env name=COMPOSER_CACHE_DIR::$(composer config cache-dir)"
 
-      - name: Determine composer cache directory on Windows
+      - shell: powershell
         if: matrix.os == 'windows-latest'
-        run: ECHO "::set-env name=COMPOSER_CACHE_DIR::~\AppData\Local\Composer"
+        run: echo "~\AppData\Local\Composer" >> $COMPOSER_CACHE_DIR
 
       - name: Cache dependencies installed with composer
         uses: actions/cache@v1
