--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,12 +69,22 @@ jobs:
 
       - name: Determine composer cache directory on Windows
         if: matrix.os == 'windows-latest'
-        run: echo "::set-env name=COMPOSER_CACHE_DIR::~\AppData\Local\Composer"
+        run: echo "~\AppData\Local\Composer" >> $COMPOSER_CACHE_DIR
 
-      - name: Cache dependencies installed with composer
+      - name: Cache dependencies installed with composer Linux
+        if: matrix.os == 'ubuntu-latest'
         uses: actions/cache@v1
         with:
           path: ${{ env.COMPOSER_CACHE_DIR }}
+          key: php${{ matrix.php }}-composer-${{ matrix.dependencies }}-${{ hashFiles('**/composer.json') }}
+          restore-keys: |
+            php${{ matrix.php }}-composer-${{ matrix.dependencies }}-
+
+      - name: Cache dependencies installed with composer Windows
+        if: matrix.os == 'windows-latest'
+        uses: actions/cache@v1
+        with:
+          path: ${COMPOSER_CACHE_DIR}
           key: php${{ matrix.php }}-composer-${{ matrix.dependencies }}-${{ hashFiles('**/composer.json') }}
           restore-keys: |
             php${{ matrix.php }}-composer-${{ matrix.dependencies }}-
