--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,10 @@
         "process-timeout": 1800,
         "fxp-asset": {
             "enabled": false
+        },
+        "allow-plugins": {
+            "yiisoft/yii2-httpclient": true,
+            "ext-json": true
         }
     },
     "scripts": {
