--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "yiisoft/yii2-httpclient": "~2.0.0",
-        "ext-json": "*"
+        "yiisoft/yii2-httpclient": "~2.0.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -37,10 +36,6 @@
         "process-timeout": 1800,
         "fxp-asset": {
             "enabled": false
-        },
-        "allow-plugins": {
-            "yiisoft/yii2-httpclient": true,
-            "ext-json": true
         }
     },
     "scripts": {
