Yii: Composer. Autoriza allow-plugins.

--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,7 @@
         "codeception/module-asserts": "^1.0.0"
     },
     "config": {
-        "allow-plugins": {
-            "ext-json": true
-        },
+        "allow-plugins": true,
         "process-timeout": 1800,
         "fxp-asset": {
             "enabled": false
