--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Set Actions Allow Unsecure Commands Windows
         if: matrix.os == 'windows-latest'
-        run: echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" >> $GITHUB_ENV
+        run: echo "ACTIONS_s_UNSECURE_COMMANDS=true" >> $GITHUB_ENV
 
       - name: Checkout
         uses: actions/checkout@v2
@@ -88,6 +88,9 @@ jobs:
           key: php${{ matrix.php }}-composer-${{ matrix.dependencies }}-${{ hashFiles('**/composer.json') }}
           restore-keys: |
             php${{ matrix.php }}-composer-${{ matrix.dependencies }}-
+
+      - name: Install dependencies with composer php PHP [5.6 - 7.4] ALLOWED
+        run: composer config --no-plugins allow-plugins.yiisoft/yii2-composer true
 
       - name: Install dependencies with composer php PHP [5.6 - 7.4]
         run: composer update --prefer-dist --no-interaction --no-progress --optimize-autoloader --ansi
