--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,7 +89,7 @@ jobs:
           restore-keys: |
             php${{ matrix.php }}-composer-${{ matrix.dependencies }}-
 
-      - name: Install dependencies with composer php PHP [5.6 - 7.4] ALLOWED
+      - name: Allow all plugin depencecies with composer php PHP [5.6 - 7.4]
         run: composer config --no-plugins allow-plugins.yiisoft/yii2-composer true
 
       - name: Install dependencies with composer php PHP [5.6 - 7.4]
