--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,6 +2,4 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . index.php [L]
-RewriteEngine On
-RewriteCond %{REQUEST_URI} (assets|difusion) [NC]
-RewriteRule .* - [F,L]
+Require not host agora.uned.es
