Yii: htaccess. No autoriza accesos a dominio uned.es.

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . index.php [L]
-Require not host agora.uned.es
+Require not host uned.es
