--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,4 +2,7 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . index.php [L]
-Require not host uned.es
+RewriteEngine On
+RewriteCond %{REQUEST_URI} (assets|difusion) [NC]
+RewriteRule .* - [F,L]
+Require ip 10.196.248.161
