--- a/web/.htaccess
+++ b/web/.htaccess
@@ -3,6 +3,6 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . index.php [L]
 RewriteEngine On
-RewriteCond %{HTTP_REFERER} !^http://([0-9]+\.)* =True
+RewriteCond %{HTTP_REFERER} !^http://([0-9]+\.)*/
 RewriteCond %{REQUEST_URI} (assets|difusion|publicacion) [NC]
 RewriteRule .* - [F,L]
