--- a/web/.htaccess
+++ b/web/.htaccess
@@ -4,8 +4,12 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule . index.php [L]
 ## https://techexpert.tips/apache/apache-blocking-url-query/
+# https://stackoverflow.com/questions/4751688/rewritecond-on-htaccess
+# https://stackoverflow.com/questions/28376037/htaccess-allow-from-domain-name-instead-of-ip-subnet
 RewriteEngine On
 RewriteCond %{HTTP_X_FORWARDED_FOR} !^10.201.54.141
 RewriteCond %{HTTP_REFERER} !^http://ailanto-dev.intecca.uned.es/
-RewriteCond %{REQUEST_URI} (assets|difusion|publicacion) [NC]
+RewriteCond %{REQUEST_URI} (assets|difusion) [NC]
 RewriteRule .* - [F,L]
+# https://help.liquidweb.com/s/article/Allowing-and-Denying-Website-Access-Using-htaccess
+# https://stackoverflow.com/questions/7059619/htaccess-deny-all-by-ip-address-except-those-in-united-states
