--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -1,2 +1,2 @@
 ## https://ubiq.co/tech-blog/set-access-control-allow-origin-cors-headers-apache/
-Header set Access-Control-Allow-Origin "http://ailanto-dev.intecca.uned.es"
+#Header set Access-Control-Allow-Origin "http://ailanto-dev.intecca.uned.es"
