--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -3,3 +3,4 @@ Header set Access-Control-Allow-Origin "http://ailanto-dev.intecca.uned.es"
 #Header add Access-Control-Allow-Origin "https://ailanto-dev.intecca.uned.es"
 #Header add Access-Control-Allow-Origin "https://acacia.uned.es"
 #Header add Access-Control-Allow-Origin "https://agora.uned.es"
+deny from .*intecca\.uned\.es.*
