--- a/web/.htaccess
+++ b/web/.htaccess
@@ -13,9 +13,12 @@ RewriteEngine On
 ## https://stackoverflow.com/questions/922399/how-to-use-and-or-for-rewritecond-on-apache
 RewriteCond %{HTTP_X_FORWARDED_FOR} !^10.201.54.141
 RewriteCond %{HTTP_REFERER} !^http://ailanto-dev.intecca.uned.es/
-RewriteCond %{REQUEST_URI} (assets|difusion) [NC]
+RewriteCond %{REQUEST_URI} (assets|difusion|publicacion) [NC]
 RewriteRule .* - [F,L]
 # https://stackoverflow.com/questions/7059619/htaccess-deny-all-by-ip-address-except-those-in-united-states
 ## https://help.liquidweb.com/s/article/Allowing-and-Denying-Website-Access-Using-htaccess
 # Require not host uned.es
 # Require host uned.es
+
+## https://ubiq.co/tech-blog/set-access-control-allow-origin-cors-headers-apache/
+Header set Access-Control-Allow-Origin "http://ailanto-dev.intecca.uned.es"
