--- a/web/.htaccess
+++ b/web/.htaccess
@@ -12,7 +12,7 @@ RewriteRule . index.php [L]
 RewriteEngine On
 ## https://stackoverflow.com/questions/922399/how-to-use-and-or-for-rewritecond-on-apache
 RewriteCond %{HTTP_X_FORWARDED_FOR} !^10.201.54.141
-RewriteCond %{HTTP_REFERER} !^http://ailanto-dev.intecca.uned.es/ [NC]
+RewriteCond %{HTTP_REFERER} !^http://ailanto-dev.intecca.uned.es/.* [NC]
 RewriteCond %{REQUEST_URI} (assets|difusion) [NC]
 RewriteRule .* - [F,L]
 # https://stackoverflow.com/questions/7059619/htaccess-deny-all-by-ip-address-except-those-in-united-states
