--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -9,8 +9,8 @@ RewriteEngine On
 # [HTTP_X_FORWARDED_SERVER] => ailanto-dev.intecca.uned.es
 ## http://tltech.com/info/referrer-htaccess/
 #RewriteCond %{HTTP_REFERER} !^http://www.mysite.com/.*
-RewriteCond %{HTTP_HOST}@@%{HTTP_REFERER} !^([^@]*)@@https?://\1/.*
-#RewriteCond %{HTTP_REFERER} !^http://ailanto-dev.intecca.uned.es/.*
+#RewriteCond %{HTTP_HOST}@@%{HTTP_REFERER} !^([^@]*)@@https?://\1/.*
+RewriteCond %{HTTP_REFERER} ^http://ailanto-dev.intecca.uned.es/.*
 RewriteRule .* - [F,L]
 
 ## https://ubiq.co/tech-blog/set-access-control-allow-origin-cors-headers-apache/
