--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -16,7 +16,7 @@ RewriteCond %{HTTP_REFERER} !^https://agora\.uned\.es/
 #RewriteCond %{HTTP_HOST} !^agora.uned.es
 #RewriteCond %{ENV:AH_Client_IP} 10.201.54.141
 #RewriteRule .* - [F,L]
-RewriteRule .* - [L,R=%{HTTP_REFERER}]
+RewriteRule .* - [L,R=333]
 
 ## https://ubiq.co/tech-blog/set-access-control-allow-origin-cors-headers-apache/
 Header set Access-Control-Allow-Origin "http://ailanto-dev.intecca.uned.es"
