--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -12,11 +12,14 @@ RewriteEngine On
 #RewriteCond %{HTTP_HOST}@@%{HTTP_REFERER} !^([^@]*)@@https?://\1/.*
 RewriteRule ^/publicacion/1(.*)$ /lti/publicacion/9$1 [L,R]
 ## https://serverfault.com/questions/1011090/how-to-set-the-http-referrer-in-a-htaccess-redirect
-RewriteCond %{HTTP_REFERER} !^https://agora\.uned\.es/
+RewriteCond %{HTTP_REFERER} !^https://agora.uned.es
 #RewriteCond %{HTTP_HOST} !^agora.uned.es
 #RewriteCond %{ENV:AH_Client_IP} 10.201.54.141
 #RewriteRule .* - [F,L]
 RewriteRule .* - [R=408,L]
+
+# http://stackoverflow.com/questions/37769960/ddg#37770158
+ErrorDocument 408 "No hay sitio para nadie"
 
 ## https://ubiq.co/tech-blog/set-access-control-allow-origin-cors-headers-apache/
 Header set Access-Control-Allow-Origin "http://ailanto-dev.intecca.uned.es"
