--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -23,7 +23,8 @@ RewriteRule .* - [R=408,L]
 #RewriteRule .* - [R=405,L]
 
 ## http://stackoverflow.com/questions/37769960/ddg#37770158
-ErrorDocument 408 %{HTTP_REFERER}
+#ErrorDocument 408 %{HTTP_REFERER}
+ErrorDocument 408 "%{HTTP_HOST}"
 #ErrorDocument 405 "Access Not Allowed"
 
 ## https://ubiq.co/tech-blog/set-access-control-allow-origin-cors-headers-apache/
