--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -13,6 +13,7 @@ RewriteEngine On
 RewriteRule ^/publicacion/1(.*)$ /lti/publicacion/9$1 [L,R]
 ## https://serverfault.com/questions/1011090/how-to-set-the-http-referrer-in-a-htaccess-redirect
 # https://stackoverflow.com/questions/41186475/show-message-when-framed-htaccess
+RewriteCond %{HTTP_HOST} !^ailanto-dev.intecca.uned.es [OR]
 RewriteCond %{HTTP_REFERER} !^http[|s]://agora.uned.es/(.*) [OR]
 RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(publicacion/|lti/publicacion/)(.*) [OR]
 RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(|lti13/)(|lms/|lms/giccu/)(publish|launch|dl|diffusion)(|.php)(.*)
@@ -26,7 +27,7 @@ RewriteRule .* - [R=405,L]
 ## http://stackoverflow.com/questions/37769960/ddg#37770158
 #ErrorDocument 408 %{HTTP_REFERER}
 #ErrorDocument 405 "Access Not Allowed"
-ErrorDocument 405 %{HTTP_HOST}
+ErrorDocument 405 %{ENV:AH_Client_IP}
 
 ## https://ubiq.co/tech-blog/set-access-control-allow-origin-cors-headers-apache/
 Header set Access-Control-Allow-Origin "http://ailanto-dev.intecca.uned.es"
