Yii: htaccess. Publicacion. DesAutoriza acceso OR dominio. Error 405 Mensaje.

--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -13,7 +13,7 @@ RewriteEngine On
 RewriteRule ^/publicacion/1(.*)$ /lti/publicacion/9$1 [L,R]
 ## https://serverfault.com/questions/1011090/how-to-set-the-http-referrer-in-a-htaccess-redirect
 # https://stackoverflow.com/questions/41186475/show-message-when-framed-htaccess
-#RewriteCond %{HTTP_HOST} !^ailanto-dev.intecca.uned.es [OR]
+RewriteCond %{HTTP_HOST} !^ailanto-dev.intecca.uned.es [OR]
 RewriteCond %{HTTP_REFERER} !^http[|s]://agora.uned.es/(.*) [OR]
 RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(publicacion/|lti/publicacion/)(.*) [OR]
 RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(|lti13/)(|lms/|lms/giccu/)(publish|launch|dl|diffusion)(|.php)(.*)
