Yii: htaccess. Publicacion. DesAutoriza acceso OR dominio. Error 405 Mensaje.

--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -27,8 +27,8 @@ RewriteRule .* - [R=405,L]
 
 ## http://stackoverflow.com/questions/37769960/ddg#37770158
 #ErrorDocument 408 %{HTTP_REFERER}
-ErrorDocument 405 "Access Not Allowed"
-#ErrorDocument 405 %{HTTP_HOST}
+#ErrorDocument 405 "Access Not Allowed"
+ErrorDocument 405 %{HTTP_X_FORWARDED_HOST}
 
 ## https://ubiq.co/tech-blog/set-access-control-allow-origin-cors-headers-apache/
 Header set Access-Control-Allow-Origin "http://ailanto-dev.intecca.uned.es"
