--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -28,7 +28,7 @@ RewriteRule .* - [R=405,L]
 ## http://stackoverflow.com/questions/37769960/ddg#37770158
 #ErrorDocument 408 %{HTTP_REFERER}
 #ErrorDocument 405 "Access Not Allowed"
-ErrorDocument 405 %{HTTP_X_FORWARDED_HOST}
+ErrorDocument 405 https://ailanto-dev.intecca.uned.es/lti13/lms/giccu/diffusion.php
 
 ## https://ubiq.co/tech-blog/set-access-control-allow-origin-cors-headers-apache/
 Header set Access-Control-Allow-Origin "http://ailanto-dev.intecca.uned.es"
