--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -17,8 +17,8 @@ RewriteRule ^/publicacion/1(.*)$ /lti/publicacion/9$1 [L,R]
 RewriteCond %{HTTP_HOST} !^agora.uned.es [OR]
 #RewriteCond %{HTTP_REFERER} !^http[|s]://agora.uned.es/(.*) [OR]
 #RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(uploads/publicacion/|publicacion/|lti/publicacion/)(.*) [OR]
-RewriteCond %{HTTP_REFERER} !^https://ailanto-dev.intecca.uned.es/publicacion/10020220629094514000000a/ [L]
 RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(|lti13)(|lms/|lms/giccu/)(|publish|launch|dl|diffusion)(|.php)(.*) [OR]
+RewriteCond %{HTTP_REFERER} !^https://ailanto-dev.intecca.uned.es/publicacion/(.*)
 #RewriteCond %{HTTP_REFERER} !^https://agora.uned.es/
 #RewriteCond %{HTTP_HOST} !^agora.uned.es
 #RewriteCond %{ENV:AH_Client_IP} 10.201.54.141
