--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -14,8 +14,8 @@ RewriteRule ^/publicacion/1(.*)$ /lti/publicacion/9$1 [L,R]
 ## https://serverfault.com/questions/1011090/how-to-set-the-http-referrer-in-a-htaccess-redirect
 # https://stackoverflow.com/questions/41186475/show-message-when-framed-htaccess
 #RewriteCond %{HTTP_HOST} !^ailanto-dev.intecca.uned.es [OR]
-RewriteCond %{HTTP_HOST} !^agora.uned.es [OR]
-#RewriteCond %{HTTP_REFERER} !^http[|s]://agora.uned.es/(.*) [OR]
+#RewriteCond %{HTTP_HOST} !^agora.uned.es [OR]
+RewriteCond %{HTTP_REFERER} !^http[|s]://agora.uned.es/(.*) [OR]
 #RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(uploads/publicacion/|publicacion/|lti/publicacion/)(.*) [OR]
 #RewriteCond %{HTTP_REFERER} !^http[|s]://ailanto-dev.intecca.uned.es/(lti/|)(lti13|publicacion/|lti/publicacion/|)(lms/|lms/giccu/|[a-f,0-9]{24}/|)(publish|launch|dl|diffusion|)(.php|.*|)
 RewriteCond %{HTTP_REFERER} !^http[s|]://ailanto-dev.intecca.uned.es(:9002|)/(lti13/|lti/lti13/|)(lms/|lms/giccu/|)(publish|launch|dl|diffusion|)(.php|)
