--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -31,6 +31,9 @@ RewriteCond %{HTTP_REFERER} !^http[s|]://10.201.54.31/
 #RewriteRule .* - [R=408,L]
 RewriteRule .* - [R=405,L]
 
+## TODO Posibilidad 6: redireccionar el contenido publicado en el Sistema LTI
+RewriteRule ^(.*)$ /lti13/jwks.php?path=$1 [L,R]
+
 ## https://stackoverflow.com/questions/57356938/apache-is-adding-javascript-in-html-file
 ## https://serverfault.com/questions/46449/how-to-inject-html-code-into-every-delivered-html-page
 ##RewriteCond ^/publicacion/1(.*)$
