--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -9,15 +9,6 @@ AddCharset utf-8 .html .css .php .txt .js
 
 RewriteEngine On
 
-## TODO Posibilidad 6: redireccionar el contenido publicado en el Sistema LTI
-## https://stackoverflow.com/questions/57356938/apache-is-adding-javascript-in-html-file
-## https://serverfault.com/questions/46449/how-to-inject-html-code-into-every-delivered-html-page
-##RewriteCond ^/publicacion/1(.*)$
-##RewriteCond %{HTTP_REFERER} !^http://www.mysite.com/.*
-##RewriteCond %{HTTP_HOST}@@%{HTTP_REFERER} !^([^@]*)@@https?://\1/.*
-##RewriteRule ^/publicacion/1(.*)$ /lti13/publicacion/9$1 [L,R]
-RewriteRule ^(.*)/$ /lti13/jwks.php?path=$1 [L,R]
-
 ## TODO+NE Posibilidad 3: limitar acceso vía GET a las carpetas publicación/ mediante: URL redirección Servidor LTI (HTTP_REFERER==launch/login/publish/diffusion.php)
 ## https://stackoverflow.com/questions/922399/how-to-use-and-or-for-rewritecond-on-apache
 # [HTTP_X_FORWARDED_FOR] => 10.201.54.141
@@ -40,6 +31,15 @@ RewriteCond %{HTTP_REFERER} !^http[s|]://10.201.54.31/
 #RewriteRule .* - [F,L]
 #RewriteRule .* - [R=408,L]
 RewriteRule .* - [R=405,L]
+
+## TODO Posibilidad 6: redireccionar el contenido publicado en el Sistema LTI
+## https://stackoverflow.com/questions/57356938/apache-is-adding-javascript-in-html-file
+## https://serverfault.com/questions/46449/how-to-inject-html-code-into-every-delivered-html-page
+RewriteCond %{REQUEST_URI} ^?id_token=.*
+##RewriteCond %{HTTP_REFERER} !^http://www.mysite.com/.*
+##RewriteCond %{HTTP_HOST}@@%{HTTP_REFERER} !^([^@]*)@@https?://\1/.*
+##RewriteRule ^/publicacion/1(.*)$ /lti13/publicacion/9$1 [L,R]
+RewriteRule ^(.*)/$ /lti13/jwks.php?path=$1 [L,R]
 
 ## http://stackoverflow.com/questions/37769960/ddg#37770158
 #ErrorDocument 408 %{HTTP_REFERER}
