--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -12,11 +12,12 @@ RewriteEngine On
 ## TODO Posibilidad 6: redireccionar el contenido publicado en el Sistema LTI
 ## https://stackoverflow.com/questions/57356938/apache-is-adding-javascript-in-html-file
 ## https://serverfault.com/questions/46449/how-to-inject-html-code-into-every-delivered-html-page
-RewriteCond %{REQUEST_URI} ^10020220623052455000000a?id_token=([0-9a-zA-Z.]*)
+RewriteCond %{REQUEST_URI} ^id_token=([0-9a-zA-Z.]*) [OR]
+RewriteCond %{QUERY_STRING} ^id_token=([0-9a-zA-Z.]*)
 ##RewriteCond %{HTTP_REFERER} !^http://www.mysite.com/.*
 ##RewriteCond %{HTTP_HOST}@@%{HTTP_REFERER} !^([^@]*)@@https?://\1/.*
 ##RewriteRule ^/publicacion/1(.*)$ /lti13/publicacion/9$1 [L,R]
-RewriteRule ^(.*)/$ /lti13/lms/embed.php?path=$1$2 [QSA,L,R]
+RewriteRule ^(.*)/$ /lti13/lms/embed.php?path=$1 [QSA,L,R]
 
 ## TODO+NE Posibilidad 3: limitar acceso vía GET a las carpetas publicación/ mediante: URL redirección Servidor LTI (HTTP_REFERER==launch/login/publish/diffusion.php)
 ## https://stackoverflow.com/questions/922399/how-to-use-and-or-for-rewritecond-on-apache
