Yii: htaccess. Publicacion. Autoriza DNS y local

--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -46,7 +46,7 @@ RewriteCond %{HTTP_REFERER} !^http[s|]://10.201.54.31
 RewriteRule .* - [R=405,L]
 
 ## http://stackoverflow.com/questions/37769960/ddg#37770158
-#ErrorDocument 408 %{HTTP_REFERER}
+ErrorDocument 408 %{HTTP_REFERER}
 #ErrorDocument 405 "Access Not Allowed"
 ErrorDocument 405 https://ailanto-dev.intecca.uned.es/lti13/lms/giccu/error.php
 
