--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -42,13 +42,13 @@ RewriteCond %{HTTP_REFERER} !^https://agora.uned.es
 RewriteCond %{HTTP_REFERER} !^http[s|]://10.201.54.31
 #RewriteCond %{ENV:AH_Client_IP} 10.201.54.141
 #RewriteRule .* - [F,L]
-#RewriteRule .* - [R=408,L]
-RewriteRule .* - [R=405,L]
+RewriteRule .* - [R=408,L]
+##RewriteRule .* - [R=405,L]
 
 ## http://stackoverflow.com/questions/37769960/ddg#37770158
-ErrorDocument 405 %{HTTP_REFERER}
+ErrorDocument 408 %{HTTP_REFERER}
 #ErrorDocument 405 "Access Not Allowed"
-ErrorDocument 405 https://ailanto-dev.intecca.uned.es/lti13/lms/giccu/error.php
+##ErrorDocument 405 https://ailanto-dev.intecca.uned.es/lti13/lms/giccu/error.php
 
 ## TODO+NE Incidencia `blocked by CORS policy`
 ## https://ubiq.co/tech-blog/set-access-control-allow-origin-cors-headers-apache/
