Yii: htaccess. Publicacion. Autoriza por IP 185.179.105.156

--- a/web/uploads/publicacion/.htaccess
+++ b/web/uploads/publicacion/.htaccess
@@ -44,6 +44,8 @@ RewriteCond %{HTTP_REFERER} !^http://10.201.54.31(.*)
 RewriteCond %{HTTP_REFERER} !^https://10.201.54.31(.*)
 RewriteCond %{HTTP_REFERER} !^http://193.146.230.217(.*)
 RewriteCond %{HTTP_REFERER} !^https://193.146.230.217(.*)
+RewriteCond %{HTTP_REFERER} !^http://185.179.105.156(.*)
+RewriteCond %{HTTP_REFERER} !^https://185.179.105.156(.*)
 RewriteCond %{REQUEST_URI} !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
 RewriteCond %{SCRIPT_NAME} !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
 RewriteCond %{PHP_SELF}    !(/launch.php|/lms/dl.php|/lms/embed.php|/lms/publish.php|/lms/giccu/diffusion.php)
